--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <h2 id="displayName"></h2>
 
   <div class="pet">
-    <img id="petImg" src="images/elephant_eyes_open.png" alt="Cute Pet" />
+    <img id="petImg" src="elephant_eyes_open.png" alt="Cute Pet" />
   </div>
 
     <label for="bgSelect">Choose background:</label>
     <select id="bgSelect" onchange="changeBackground()">
-      <option value="images/bg_outdoors.jpeg">Outdoors (Day)</option>
-      <option value="images/bg2.jpeg">Outdoors (Evening)</option>
+      <option value="bg_outdoors.jpeg">Outdoors (Day)</option>
+      <option value="bg2.jpeg">Outdoors (Evening)</option>
     </select>
   </div>
 
@@ -47,10 +47,10 @@
     </div>
 
     <div class="accessories">
-      <img id="hat" src="images/hat_crown.png" class="accessory hidden" />
-      <img id="glasses" src="images/glasses.png" class="accessory hidden" />
-      <img id="pinkbow" src="images/pinkbow.png" class="accessory hidden" />
-      <img id="purplebow" src="images/purplebow.png" class="accessory hidden" />
+      <img id="hat" src="hat_crown.png" class="accessory hidden" />
+      <img id="glasses" src="glasses.png" class="accessory hidden" />
+      <img id="pinkbow" src="pinkbow.png" class="accessory hidden" />
+      <img id="purplebow" src="purplebow.png" class="accessory hidden" />
     </div>
   </div>
 
