cleaned up and fixed

--- a/index.html
+++ b/index.html
@@ -11,51 +11,34 @@
 <script src="index.js" defer></script>
 
 <body>
-  <div class="name-input">
-    <label for="petName">Name your pet:</label>
-    <input type="text" id="petName" placeholder="e.g. Ellie 🐘" />
-    <button onclick="setPetName()">Save</button>
+  <div class="care-buttons">
+    <button onclick="feedPet()">🍪 Feed</button>
+    <button onclick="waterPet()">💧 Water</button>
+    <button onclick="bathePet()">🛁 Bath</button>
+    <button onclick="putPetToSleep()">🌙 Sleep</button>
   </div>
 
-  <h2 id="displayName"></h2>
+  <div class="center-wrapper">
+    <div class="name-input">
+      <label for="petName">Name your pet:</label>
+      <input type="text" id="petName" placeholder="e.g. Ellie 🐘" />
+      <button onclick="setPetName()">Save</button>
+    </div>
 
-  <div class="pet">
-    <img id="petImg" src="elephant_eyes_open.png" alt="Cute Pet" />
-  </div>
+    <h2 id="displayName"></h2>
 
     <label for="bgSelect">Choose background:</label>
     <select id="bgSelect" onchange="changeBackground()">
       <option value="bg_outdoors.jpeg">Outdoors (Day)</option>
       <option value="bg2.jpeg">Outdoors (Evening)</option>
     </select>
+
+    <div class="pet">
+      <img id="petImg" src="elephant_eyes_open.png" alt="Cute Pet" />
+    </div>
+
+    <footer>My Web Pet 🐾</footer>
   </div>
-
-  <div class="accessories-container">
-    <div class="accessory-options">
-      <h3>Accessories</h3>
-      <button onclick="toggleAccessory('hat')">🎩 Hat</button>
-      <button onclick="toggleAccessory('glasses')">🕶️ Glasses</button>
-      <button onclick="toggleAccessory('pinkbow')">🎀 Pink Bow</button>
-      <button onclick="toggleAccessory('purplebow')">🎀 Purple Bow</button>
-    </div>
-
-    <div class="care-buttons">
-      <button onclick="feedPet()">🍪 Feed</button>
-      <button onclick="waterPet()">💧 Water</button>
-      <button onclick="bathePet()">🛁 Bath</button>
-      <button onclick="putPetToSleep()">🌙 Sleep</button>
-    </div>
-
-    <div class="accessories">
-      <img id="hat" src="hat_crown.png" class="accessory hidden" />
-      <img id="glasses" src="glasses.png" class="accessory hidden" />
-      <img id="pinkbow" src="pinkbow.png" class="accessory hidden" />
-      <img id="purplebow" src="purplebow.png" class="accessory hidden" />
-    </div>
-  </div>
-
-  <footer>My Web Pet 🐾</footer>
-
-
 </body>
+
 </html>
